--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -72,8 +72,12 @@ jobs:
     strategy:
       matrix:
         browser: ['chromium', 'firefox']
+        theme: ['light', 'dark']
+        density: ['default', 'regular', 'compact']
     env:
       CLARITY_VRT_BROWSER: ${{matrix.browser}}
+      CLARITY_VRT_THEME: ${{matrix.theme}}
+      CLARITY_VRT_DENSITY: ${{matrix.density}}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -95,9 +99,9 @@ jobs:
         id: diff
         run: |
           git add .
-          git diff --cached --binary > visual-snapshot-changes-${{matrix.browser}}.diff
+          git diff --cached --binary > visual-snapshot-changes-${{matrix.browser}}-${{matrix.theme}}-${{matrix.density}}.diff
       - name: Upload Changes
         uses: actions/upload-artifact@v4
         with:
-          name: visual-snapshot-changes-${{matrix.browser}}.diff
-          path: visual-snapshot-changes-${{matrix.browser}}.diff
+          name: visual-snapshot-changes-${{matrix.browser}}-${{matrix.theme}}-${{matrix.density}}.diff
+          path: visual-snapshot-changes-${{matrix.browser}}-${{matrix.theme}}-${{matrix.density}}.diff
