--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -11,53 +11,64 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        angular: ['Angular v15', 'Angular v16', 'Angular v17', 'Angular v18', 'Angular v19']
+        runtime: [
+          {node: 18, angular: 'Angular v15'},
+          {node: 18, angular: 'Angular v16'},
+          {node: 18, angular: 'Angular v17'},
+          {node: 18, angular: 'Angular v18'},
+          {node: 18, angular: 'Angular v19'},
+          {node: 20, angular: 'Angular v20'},
+        ]
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/checkout@v4
+      - name: Setup Node.js v${{matrix.runtime.node}}
+        uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
+          node-version: ${{matrix.runtime.node}}
       - name: Install Dependencies
         run: npm ci
       - name: Update to Angular v16
-        if: ${{matrix.angular == 'Angular v16' || matrix.angular == 'Angular v17' || matrix.angular == 'Angular v18' || matrix.angular == 'Angular v19'}}
+        if: ${{matrix.runtime.angular == 'Angular v16' || matrix.runtime.angular == 'Angular v17' || matrix.runtime.angular == 'Angular v18' || matrix.runtime.angular == 'Angular v19' || matrix.runtime.angular == 'Angular v20'}}
         run: |
           npx ng update @angular/core@16 @angular/common@16 @angular/cli@16 @angular/cdk@16 --force
       - name: Update to Angular v17
-        if: ${{matrix.angular == 'Angular v17' || matrix.angular == 'Angular v18' || matrix.angular == 'Angular v19'}}
+        if: ${{matrix.runtime.angular == 'Angular v17' || matrix.runtime.angular == 'Angular v18' || matrix.runtime.angular == 'Angular v19' || matrix.runtime.angular == 'Angular v20'}}
         run: |
           npx ng update @angular/core@17 @angular/common@17 @angular/cli@17 @angular/cdk@17 --allow-dirty --force
       - name: Update to Angular v18
-        if: ${{matrix.angular == 'Angular v18' || matrix.angular == 'Angular v19'}}
+        if: ${{matrix.runtime.angular == 'Angular v18' || matrix.runtime.angular == 'Angular v19' || matrix.runtime.angular == 'Angular v20'}}
         run: |
           npx ng update @angular/core@18 @angular/common@18 @angular/cli@18 @angular/cdk@18 --allow-dirty --force
       - name: Update to Angular v19
-        if: ${{matrix.angular == 'Angular v19'}}
+        if: ${{matrix.runtime.angular == 'Angular v19' || matrix.runtime.angular == 'Angular v20'}}
         run: |
           npx ng update @angular/core@19 @angular/common@19 @angular/cli@19 @angular/cdk@19 --allow-dirty --force
+      - name: Update to Angular v20
+        if: ${{matrix.runtime.angular == 'Angular v20'}}
+        run: |
+          npx ng update @angular/core@20 @angular/common@20 @angular/cli@20 @angular/cdk@20 --allow-dirty --force
       - name: Disable Storybook Build
-        if: ${{matrix.angular != 'Angular v15'}}
+        if: ${{matrix.runtime.angular != 'Angular v15'}}
         run: node ./scripts/clear-npm-script.js _build:storybook
       - name: Lint
-        if: ${{matrix.angular == 'Angular v15'}}
+        if: ${{matrix.runtime.angular == 'Angular v15'}}
         run: npm run lint
       - name: Build
         run: npm run build
       - name: Test
         run: npm run test
       - name: Public Api Check
-        if: ${{matrix.angular == 'Angular v15'}}
+        if: ${{matrix.runtime.angular == 'Angular v15'}}
         run: npm run public-api:check
       - name: Upload Docs Artifact
-        if: ${{matrix.angular == 'Angular v15'}}
+        if: ${{matrix.runtime.angular == 'Angular v15'}}
         uses: actions/upload-artifact@v4
         with:
           name: docs
           path: dist/docs/
       - name: Upload Coverage Artifact
-        if: ${{matrix.angular == 'Angular v15'}}
+        if: ${{matrix.runtime.angular == 'Angular v15'}}
         uses: actions/upload-artifact@v4
         with:
           name: coverage
@@ -80,9 +91,9 @@ jobs:
       CLARITY_VRT_DENSITY: ${{matrix.density}}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
       - name: Install Dependencies
