fix: return husky

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lint:fix": "npm-run-all _lint:code:fix _lint:styles:fix _lint:format:fix _lint:format-stories:fix",
     "lint:changed": "npm-run-all _lint:code:changed _lint:styles:changed _lint:format:changed _lint:format-stories:changed",
     "lint:changed:fix": "npm-run-all _lint:code:changed:fix _lint:styles:changed:fix _lint:format:changed:fix _lint:format-stories:changed:fix",
+    "prepare": "husky install && patch-package",
+    "preview": "semantic-release --plugins \"@semantic-release/commit-analyzer\" \"@semantic-release/release-notes-generator\" --dry-run --no-ci",
     "public-api:check": "api-extractor run",
     "public-api:update": "api-extractor run --local",
     "start": "ng run clr-angular:start-storybook",
@@ -106,6 +108,7 @@
     "eslint-plugin-storybook": "0.8.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "glob": "9.3.1",
+    "husky": "7.0.4",
     "jasmine-core": "3.10.1",
     "jasmine-expect": "5.0.0",
     "karma": "6.3.17",
