--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@angular/router": "15.2.2",
     "@cds/core": "file:dist/@cds/core",
     "@compodoc/compodoc": "1.1.19",
+    "@custom-elements-manifest/analyzer": "0.5.7",
     "@microsoft/api-extractor": "7.33.6",
     "@playwright/test": "1.48.0",
     "@semantic-release/exec": "6.0.3",
