--- a/projects/core/src/package.json
+++ b/projects/core/src/package.json
@@ -1,3 +1,3 @@
 {
-  "customElements": "../dist/@cds/core/custom-elements.json"
+  "customElements": "../../../dist/@cds/core/custom-elements.json"
 }
