--- a/package.json
+++ b/package.json
@@ -144,10 +144,10 @@
     "stylelint-config-prettier": "9.0.3",
     "stylelint-config-recommended-scss": "5.0.2",
     "stylelint-plugin-license-header": "1.0.3",
-    "ts-node": "^10.4.0",
+    "ts-node": "10.9.1",
     "tsconfig-paths-webpack-plugin": "3.5.2",
-    "tslib": "^2.3.1",
-    "typescript": "^4.8.4",
+    "tslib": "2.3.1",
+    "typescript": "4.8.4",
     "wait-port": "1.0.4",
     "zone.js": "0.11.8"
   }
