--- a/package.json
+++ b/package.json
@@ -127,16 +127,15 @@
     "purgecss": "^4.1.3",
     "ramda": "0.29.0",
     "rimraf": "3.0.2",
-    "rollup": "^2.64.0",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-delete": "^2.0.0",
+    "rollup": "2.64.0",
+    "rollup-plugin-copy": "3.4.0",
+    "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-minify-html-literals": "1.2.6",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-shell": "1.0.3",
     "rollup-plugin-sourcemaps": "0.6.3",
     "rollup-plugin-styles": "4.0.0",
     "rollup-plugin-terser": "7.0.2",
-    "rollup-plugin-typescript2": "^0.36.0",
     "rxjs": "7.8.1",
     "sass": "1.58.1",
     "semantic-release": "19.0.3",
