--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "public-api:check": "api-extractor run",
     "public-api:update": "api-extractor run --local",
     "start": "ng run clr-angular:start-storybook",
-    "start:demo": "npm ng serve clr-demo",
+    "start:demo": "ng serve clr-demo",
     "test": "ng test clr-angular --source-map=false --watch=false",
     "test:watch": "npm run --silent test -- --watch",
     "ts-node": "ts-node --project ./tsconfig-ts-node.json",
@@ -119,7 +119,7 @@
     "karma-mocha-reporter": "2.2.5",
     "karma-parallel": "0.3.1",
     "lint-staged": "12.3.7",
-    "lit": "^2.1.3",
+    "lit": "2.4.1",
     "ng-packagr": "15.0.1",
     "node-static": "0.7.11",
     "npm-run-all": "4.1.5",
@@ -127,7 +127,7 @@
     "playwright": "1.48.0",
     "postcss-cli": "8.3.1",
     "prettier": "2.6.2",
-    "purgecss": "^4.1.3",
+    "purgecss": "4.1.3",
     "ramda": "0.29.0",
     "rimraf": "3.0.2",
     "rollup": "4.20.0",
