feat: update angular to 18

--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../projects/angular/tsconfig.lib.json",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "baseUrl": "./",
     "paths": {
       "@clr/angular": ["./../projects/angular/src/index.ts"]
