--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -31,6 +31,11 @@ jobs:
         with:
           name: docs
           path: dist/docs/
+      - name: Upload Netlify Toml Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: netlify-config
+          path: netlify.toml
       - name: Upload Coverage Artifact
         uses: actions/upload-artifact@v4
         with:
