--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -56,6 +56,12 @@ jobs:
         with:
           name: docs
           path: dist/docs/
+      - name: Upload Netlify Toml Artifact
+        if: ${{matrix.angular == 'Angular v15'}}
+        uses: actions/upload-artifact@v4
+        with:
+          name: netlify-config
+          path: netlify.toml
       - name: Upload Coverage Artifact
         if: ${{matrix.angular == 'Angular v15'}}
         uses: actions/upload-artifact@v4
