--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@amanda-mitchell/semantic-release-npm-multiple": "3.16.0",
-    "@angular-devkit/build-angular": "^20.2.1",
+    "@angular-devkit/build-angular": "20.2.1",
     "@angular/animations": "20.2.2",
     "@angular/build": "20.2.1",
     "@angular/cdk": "20.2.1",
@@ -76,7 +76,7 @@
     "@storybook/addon-a11y": "9.1.4",
     "@storybook/addon-docs": "9.1.4",
     "@storybook/angular": "9.1.4",
-    "@storybook/types": "^8.6.14",
+    "@storybook/types": "8.6.14",
     "@types/jasmine": "5.1.9",
     "@types/node-static": "0.7.11",
     "@typescript-eslint/eslint-plugin": "8.41.0",
@@ -104,7 +104,6 @@
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "1.7.0",
     "karma-mocha-reporter": "2.2.5",
-    "karma-parallel": "0.3.1",
     "lint-staged": "16.1.5",
     "ng-packagr": "20.2.0",
     "node-static": "0.7.11",
@@ -116,7 +115,7 @@
     "rimraf": "6.0.1",
     "rxjs": "7.8.2",
     "semantic-release": "24.2.7",
-    "storybook": "^9.1.4",
+    "storybook": "9.1.4",
     "stylelint": "16.23.1",
     "stylelint-config-recommended-scss": "16.0.0",
     "stylelint-config-standard": "39.0.0",
