chore(ci): update pr preview to checkout pr branch (#2011)
Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

What kind of change does this PR introduce?

- [ ] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [x] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

Issue Number: N/A

- [ ] Yes
- [x] No

Co-authored-by: Valentin Mladenov <mvalentin@vmware.com>

--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -20,8 +20,16 @@ jobs:
             state: context.payload.workflow_run.conclusion,
             context: `${context.workflow} / ${context.job} (${context.payload.workflow_run.event} => ${context.eventName})`,
             target_url: context.payload.workflow_run.html_url});
+      - name: Get PR Event
+        id: get-pr-event
+        uses: potiuk/get-workflow-origin@v1_5
+        with:
+          token: ${{secrets.GITHUB_TOKEN}}
+          sourceRunId: ${{github.event.workflow_run.id}}
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{steps.get-pr-event.outputs.sourceHeadBranch}}
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -34,14 +42,6 @@ jobs:
           path: dist/docs
           run_id: ${{github.event.workflow_run.id}}
           if_no_artifact_found: ignore
-      - name: Download Netlify Toml Artifact
-        id: download-netlify
-        uses: actions/download-artifact@v5
-        with:
-          name: netlify-config
-          path: netlify.toml
-          run_id: ${{github.event.workflow_run.id}}
-          if_no_artifact_found: ignore
       - name: Download Coverage Artifact
         id: download-coverage
         uses: actions/download-artifact@v5
@@ -50,13 +50,6 @@ jobs:
           path: dist/docs/coverage
           run_id: ${{github.event.workflow_run.id}}
           if_no_artifact_found: ignore
-      - name: Get PR Event
-        id: get-pr-event
-        if: ${{steps.download-docs.outputs.found_artifact == 'true'}}
-        uses: potiuk/get-workflow-origin@v1_5
-        with:
-          token: ${{secrets.GITHUB_TOKEN}}
-          sourceRunId: ${{github.event.workflow_run.id}}
       - name: Deploy Docs Preview
         if: ${{steps.download-docs.outputs.found_artifact == 'true'}}
         timeout-minutes: 5
