chore(demo): update build configuration (#2012)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

- [ ] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [x] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Issue Number: N/A

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

## Other information

---------

Co-authored-by: Valentin Mladenov <mvalentin@vmware.com>
Co-authored-by: Daniel Tsanev <127101685+dtsanevmw@users.noreply.github.com>

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
           "builder": "@angular/build:application",
           "options": {
             "outputPath": {
-              "base": "dist/docs/demo"
+              "base": "dist/docs/demo",
+              "browser": ""
             },
             "index": "projects/demo/src/index.html",
             "polyfills": ["projects/demo/src/polyfills.ts"],
@@ -64,15 +65,6 @@
                   "maximumError": "8kb"
                 }
               ]
-            },
-            "dark": {
-              "styles": ["projects/angular/src/dark-theme.scss", "projects/demo/src/styles.scss"],
-              "fileReplacements": [
-                {
-                  "replace": "projects/demo/src/environments/environment.ts",
-                  "with": "projects/demo/src/environments/environment.dark.ts"
-                }
-              ]
             }
           },
           "defaultConfiguration": ""
@@ -85,9 +77,6 @@
           "configurations": {
             "production": {
               "buildTarget": "clr-demo:build:production"
-            },
-            "dark": {
-              "buildTarget": "clr-demo:build:dark"
             }
           }
         }
