--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -6,7 +6,6 @@ on:
       - completed
 permissions:
   actions: read
-  statuses: write
 jobs:
   pr-preview:
     timeout-minutes: 10
@@ -43,7 +42,7 @@ jobs:
           run-id: ${{github.event.workflow_run.id}}
           github-token: ${{ github.token }}
       - name: Deploy Docs Preview
-        if: ${{steps.download-docs.outputs.found_artifact == 'true'}}
+        if: ${{steps.download-docs.outputs.found-artifact == 'true'}}
         timeout-minutes: 5
         env:
           NETLIFY_AUTH_TOKEN: ${{secrets.NETLIFY_AUTH_TOKEN}}
