--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -8,6 +8,7 @@ permissions:
   actions: read
 jobs:
   pr-preview:
+    name: PR Preview
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
@@ -54,4 +55,4 @@ jobs:
         timeout-minutes: 5
         env:
           NETLIFY_AUTH_TOKEN: ${{secrets.NETLIFY_AUTH_TOKEN}}
-        run: npx netlify-cli deploy --no-build --site ${{secrets.NETLIFY_SITE_NAME}} --alias ${{steps.get-pr-event.outputs.pullRequestNumber}}
+        run: npx netlify-cli@23.7.3 deploy --no-build --site ${{secrets.NETLIFY_SITE_NAME}} --alias ${{steps.get-pr-event.outputs.pullRequestNumber}}
