--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@clr/ui",
+  "version": "17.11.6",
   "description": "CSS for Clarity",
   "homepage": "https://clarity.design",
   "repository": {
