--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "_build:ui:prefix": "postcss ./dist/clr-ui/clr-ui.css --use autoprefixer --dir ./dist/clr-ui",
     "_build:ui:optimize": "npm-run-all _build:ui:optimize:*",
     "_build:ui:optimize:clr-ui": "csso ./dist/clr-ui/clr-ui.css --output ./dist/clr-ui/clr-ui.min.css --source-map file --no-restructure",
-    "_build:ui:src": "cpy \"**/*.scss\" ./../../dist/clr-ui --cwd=./projects/angular --parents",
+    "_build:ui:src": "node ./scripts/copy-components-scs-files.js",
     "_build:ui:style-docs": "node ./scripts/compile-style-docs.js",
-    "_build:ui:package": "cpy ./projects/ui/package.json ./projects/ui/README.md ./dist/clr-ui",
+    "_build:ui:package": "cp projects/ui/package.json projects/ui/README.md dist/clr-ui/",
     "_lint:code": "eslint .",
     "_lint:code:fix": "npm run --silent _lint:code -- --fix",
     "_lint:code:changed": "node ./scripts/get-changed-files.js --command \"eslint\"",
