--- a/package.json
+++ b/package.json
@@ -26,14 +26,13 @@
     "_build:angular": "ng build clr-angular --configuration production",
     "_build:demo": "ng build clr-demo --configuration production",
     "_build:storybook": "ng run clr-angular:build-storybook",
-    "_build:ui": "npm-run-all _build:ui:css _build:ui:prefix _build:ui:optimize _build:ui:src _build:ui:style-docs _build:ui:package",
+    "_build:ui": "npm-run-all _build:ui:css _build:ui:prefix _build:ui:optimize _build:ui:required-files _build:ui:style-docs",
     "_build:ui:css": "sass ./projects/ui/src:./dist/clr-ui --precision=8 --load-path=node_modules",
     "_build:ui:prefix": "postcss ./dist/clr-ui/clr-ui.css --use autoprefixer --dir ./dist/clr-ui",
     "_build:ui:optimize": "npm-run-all _build:ui:optimize:*",
     "_build:ui:optimize:clr-ui": "csso ./dist/clr-ui/clr-ui.css --output ./dist/clr-ui/clr-ui.min.css --source-map file --no-restructure",
-    "_build:ui:src": "node ./scripts/copy-components-scs-files.js",
     "_build:ui:style-docs": "node ./scripts/compile-style-docs.js",
-    "_build:ui:package": "cp projects/ui/package.json projects/ui/README.md dist/clr-ui/",
+    "_build:ui:required-files": "node ./scripts/copy-ui-files.js",
     "_lint:code": "eslint .",
     "_lint:code:fix": "npm run --silent _lint:code -- --fix",
     "_lint:code:changed": "node ./scripts/get-changed-files.js --command \"eslint\"",
