chore: update _build:ui copy scripts and preview branches (#2064)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [ ] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [X] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: N/A

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

--- a/package.json
+++ b/package.json
@@ -26,14 +26,13 @@
     "_build:angular": "ng build clr-angular --configuration production",
     "_build:demo": "ng build clr-demo --configuration production",
     "_build:storybook": "ng run clr-angular:build-storybook",
-    "_build:ui": "npm-run-all _build:ui:css _build:ui:prefix _build:ui:optimize _build:ui:src _build:ui:style-docs _build:ui:package",
+    "_build:ui": "npm-run-all _build:ui:css _build:ui:prefix _build:ui:optimize _build:ui:required-files _build:ui:style-docs",
     "_build:ui:css": "sass ./projects/ui/src:./dist/clr-ui --precision=8 --load-path=node_modules",
     "_build:ui:prefix": "postcss ./dist/clr-ui/clr-ui.css --use autoprefixer --dir ./dist/clr-ui",
     "_build:ui:optimize": "npm-run-all _build:ui:optimize:*",
     "_build:ui:optimize:clr-ui": "csso ./dist/clr-ui/clr-ui.css --output ./dist/clr-ui/clr-ui.min.css --source-map file --no-restructure",
-    "_build:ui:src": "cpy \"**/*.scss\" ./../../dist/clr-ui --cwd=./projects/angular --parents",
     "_build:ui:style-docs": "node ./scripts/compile-style-docs.js",
-    "_build:ui:package": "cpy ./projects/ui/package.json ./projects/ui/README.md ./dist/clr-ui",
+    "_build:ui:required-files": "node ./scripts/copy-ui-files.js",
     "_lint:code": "eslint .",
     "_lint:code:fix": "npm run --silent _lint:code -- --fix",
     "_lint:code:changed": "node ./scripts/get-changed-files.js --command \"eslint\"",
@@ -82,7 +81,6 @@
     "@typescript-eslint/eslint-plugin": "8.41.0",
     "@typescript-eslint/parser": "8.41.0",
     "autoprefixer": "10.4.21",
-    "cpy-cli": "6.0.0",
     "csso-cli": "4.0.2",
     "eslint": "9.34.0",
     "eslint-config-prettier": "10.1.8",
