--- a/package.json
+++ b/package.json
@@ -26,14 +26,13 @@
     "_build:angular": "ng build clr-angular --configuration production",
     "_build:demo": "ng build clr-demo --configuration production",
     "_build:storybook": "ng run clr-angular:build-storybook",
-    "_build:ui": "npm-run-all _build:ui:css _build:ui:prefix _build:ui:optimize _build:ui:src _build:ui:style-docs _build:ui:package",
+    "_build:ui": "npm-run-all _build:ui:css _build:ui:prefix _build:ui:optimize _build:ui:required-files _build:ui:style-docs",
     "_build:ui:css": "sass ./projects/ui/src:./dist/clr-ui --precision=8 --load-path=node_modules",
     "_build:ui:prefix": "postcss ./dist/clr-ui/clr-ui.css --use autoprefixer --dir ./dist/clr-ui",
     "_build:ui:optimize": "npm-run-all _build:ui:optimize:*",
     "_build:ui:optimize:clr-ui": "csso ./dist/clr-ui/clr-ui.css --output ./dist/clr-ui/clr-ui.min.css --source-map file --no-restructure",
-    "_build:ui:src": "cpy \"**/*.scss\" ./../../dist/clr-ui --cwd=./projects/angular --parents",
     "_build:ui:style-docs": "node ./scripts/compile-style-docs.js",
-    "_build:ui:package": "cpy ./projects/ui/package.json ./projects/ui/README.md ./dist/clr-ui",
+    "_build:ui:required-files": "node ./scripts/copy-ui-files.js",
     "_lint:code": "eslint . --ext .js,.json,.ts",
     "_lint:code:fix": "npm run --silent _lint:code -- --fix",
     "_lint:code:changed": "node ./scripts/get-changed-files.js --command \"eslint\" --filter \"**/*.{js,json,ts}\"",
@@ -80,7 +79,6 @@
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
     "autoprefixer": "10.4.13",
-    "cpy-cli": "3.1.1",
     "csso-cli": "3.0.0",
     "eslint": "8.26.0",
     "eslint-config-prettier": "8.5.0",
