wip: type declaration entrypoints

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test": "ng test clr-angular --no-watch --source-map=false",
     "test:watch": "npm run --silent test -- --watch",
     "ts-node": "ts-node --project ./tsconfig-ts-node.json",
-    "_build:angular": "ng build clr-angular --configuration production",
+    "_build:angular": "npm-run-all _build:angular:lib _build:angular:declarations",
+    "_build:angular:lib": "ng build clr-angular --configuration production",
+    "_build:angular:declarations": "npx tsc -p projects/angular/tsconfig.lib.postprod.json",
     "_build:demo": "ng build clr-demo --configuration production",
     "_build:storybook": "ng run clr-angular:build-storybook",
     "_build:ui": "npm-run-all _build:ui:css _build:ui:prefix _build:ui:optimize _build:ui:required-files _build:ui:style-docs",
