fix: api extractor dynamically

--- a/.eslintignore
+++ b/.eslintignore
@@ -2,6 +2,6 @@
 /.angular
 **/node_modules
 /dist
-/projects/angular/clarity.api.md
+/projects/**/*.api.md
 /.storybook/preview.js
 /documentation.json
