--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "lint:changed": "npm-run-all _lint:code:changed _lint:styles:changed _lint:format:changed _lint:format-stories:changed",
     "lint:changed:fix": "npm-run-all _lint:code:changed:fix _lint:styles:changed:fix _lint:format:changed:fix _lint:format-stories:changed:fix",
     "prepare": "husky install && patch-package",
-    "public-api:check": "api-extractor run",
-    "public-api:update": "api-extractor run --local",
+    "public-api:check": "node scripts/api-extractor.js",
+    "public-api:update": "node scripts/api-extractor.js --local",
     "start": "npm run clean && ng run clr-angular:start-storybook",
     "start:demo": "npm run clean && ng serve clr-demo",
     "test": "npm-run-all _test:angular _test:addons",
