fix: migrate icon imports

--- a/angular.json
+++ b/angular.json
@@ -155,11 +155,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "styles": [
-              "node_modules/@cds/core/global.min.css",
-              "node_modules/@cds/core/styles/theme.dark.min.css",
-              "projects/ui/src/clr-ui.scss"
-            ],
+            "styles": ["projects/ui/src/clr-ui.scss"],
             "main": "projects/addons/test.ts",
             "tsConfig": "projects/addons/tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
