--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "start": "npm run clean && ng run clr-angular:start-storybook",
     "start:demo": "npm run clean && ng serve clr-demo",
     "test": "npm-run-all _test:angular _test:addons",
-    "test:angular:watch": "npm run --silent _test:angular -- --watch",
-    "test:addons:watch": "npm run --silent _test:addons -- --watch",
+    "test:watch": "npm-run-all --parallel _test:angular:watch _test:addons:watch",
     "ts-node": "ts-node --project ./tsconfig-ts-node.json",
-    "_test:angular": "ng test clr-angular  --source-map=false --watch=false",
-    "_test:addons": "ng test clr-addons  --source-map=false --watch=false",
+    "_test:angular": "ng test clr-angular --configuration=ci",
+    "_test:addons": "ng test clr-addons --configuration=ci",
+    "_test:angular:watch": "ng test clr-angular",
+    "_test:addons:watch": "ng test clr-addons",
     "_build:angular": "ng build clr-angular --configuration production",
     "_build:addons": "ng build clr-addons --configuration production",
     "_build:demo": "ng build clr-demo --configuration production",
