--- a/.github/workflows/update-preview-build-branches.yml
+++ b/.github/workflows/update-preview-build-branches.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
       - name: Install Dependencies
-        run: npm ci
+        run: npm ci --ignore-scripts
       - name: Disable Docs Builds
         run: node ./scripts/clear-npm-script.js _build:demo _build:storybook
       - name: Build
