chore: use head_sha for snapshot update and edit pr-event action

--- a/.github/workflows/pr-visual-snapshot-update-bot.yml
+++ b/.github/workflows/pr-visual-snapshot-update-bot.yml
@@ -16,15 +16,21 @@ jobs:
       - uses: haya14busa/action-workflow_run-status@v1
       - name: Get PR Event
         id: get-pr-event
-        uses: potiuk/get-workflow-origin@v1_5
+        uses: actions/github-script@v7
         with:
-          token: ${{secrets.GITHUB_TOKEN}}
-          sourceRunId: ${{github.event.workflow_run.id}}
+          script: |
+            const prs = context.payload.workflow_run.pull_requests;
+            if (prs.length > 0) {
+              core.setOutput('pullRequestNumber', prs[0].number);
+              core.setOutput('sourceHeadBranch', prs[0].head.ref);
+            } else {
+              core.setFailed('No PR found');
+            }
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          repo: ${{ github.repository }}
-          ref: ${{ steps.get-pr-event.outputs.sourceBaseBranch }}
+          repository: ${{ github.repository }}
+          ref: ${{ github.event.workflow_run.head_sha }}
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
